; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_ReportGUCOption.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_ReportGUCOption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_generic = type { i32, i8* }

@reporting_enabled = common dso_local global i64 0, align 8
@GUC_REPORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.config_generic*)* @ReportGUCOption to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ReportGUCOption(%struct.config_generic* %0) #0 {
  %2 = alloca %struct.config_generic*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store %struct.config_generic* %0, %struct.config_generic** %2, align 8
  %5 = load i64, i64* @reporting_enabled, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %27

7:                                                ; preds = %1
  %8 = load %struct.config_generic*, %struct.config_generic** %2, align 8
  %9 = getelementptr inbounds %struct.config_generic, %struct.config_generic* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = load i32, i32* @GUC_REPORT, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %27

14:                                               ; preds = %7
  %15 = load %struct.config_generic*, %struct.config_generic** %2, align 8
  %16 = call i8* @_ShowOption(%struct.config_generic* %15, i32 0)
  store i8* %16, i8** %3, align 8
  %17 = call i32 @pq_beginmessage(i32* %4, i8 signext 83)
  %18 = load %struct.config_generic*, %struct.config_generic** %2, align 8
  %19 = getelementptr inbounds %struct.config_generic, %struct.config_generic* %18, i32 0, i32 1
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 @pq_sendstring(i32* %4, i8* %20)
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @pq_sendstring(i32* %4, i8* %22)
  %24 = call i32 @pq_endmessage(i32* %4)
  %25 = load i8*, i8** %3, align 8
  %26 = call i32 @pfree(i8* %25)
  br label %27

27:                                               ; preds = %14, %7, %1
  ret void
}

declare dso_local i8* @_ShowOption(%struct.config_generic*, i32) #1

declare dso_local i32 @pq_beginmessage(i32*, i8 signext) #1

declare dso_local i32 @pq_sendstring(i32*, i8*) #1

declare dso_local i32 @pq_endmessage(i32*) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
